# seaboy

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.ninja  seaboy
src/: CMakeLists.txt  bootrom.h  cputest.c  cputest.h  main.c
src/drv/: CMakeLists.txt  audio.c  audio.h  input.c  render.c  render.h
src/hw/: CMakeLists.txt  apu.c  apu.h  cart.c  cart.h  cpu.c  cpu.h  instr.c  instr.h  joypad.c  joypad.h  mem.c  mem.h  ppu.c  ppu.h  snd.c
src/lib/: CMakeLists.txt
